data/derived/comb/progs/unify/prog1650.ml.out
Characters 47-48:
  let _  = eval (Quad (VarX, VarY, VarX), 0.5, -.5);;
                                                 ^
Error: This expression has type int but an expression was expected of type
         float
